jing-bluetooth first commit

--- a/README
+++ b/README
@@ -1,11 +1,85 @@
-BlueDevil runtime dependencies:
-    -bluez5
-        -General Bluetooth management
+# Bluetooth
 
-    -bluez-obexd
-        -Be able to "Browse File" aka kio_obexftp
-        -Be able to "Send Files" (bluedevil-sendfile)
-        -Be able to receive files
+Bluetooth module of plasma-settings for JingOS.
 
-    -pulseaudio-module-bluetooth
-        -Be able to connect A2DP profile
+
+
+## Features
+
+* Plasma applet written in QML for managing network connections
+
+* Run on JingOS platform
+
+* Brand new UI & UE with JingOS-style , based on JingUI Framework
+
+* Support keyboard & touchpad & mouse & screen touch
+
+* All keys support pressed / hovered effects
+
+* Well-designed interface material:
+
+  * Font
+  * Icon
+  * Picture
+  
+* The Bluetooth that the application handles follow the [ical](https://tools.ietf.org/html/rfc5545) standard.
+
+
+
+## Links
+
+* Home page: https://www.jingos.com/
+
+* Project page: https://github.com/JingOS-team/bluedevil
+
+* Issues: https://github.com/JingOS-team/bluedevil/issues
+
+* Development channel: https://forum.jingos.com/
+
+
+## Dependencies
+
+* Qt5 
+
+* Cmake
+
+* KI18n
+
+* Kirigami (JingOS Version)
+
+* KIOCore
+
+* BluezQt
+
+
+
+## Build
+
+To build Bluetooth from source on Linux, execute the below commands.
+
+
+
+### Compile
+
+```
+  mkdir build
+  cd build
+  cmake ../ -DCMAKE_INSTALL_PREFIX=/usr [-DDISABLE_MODEMMANAGER_SUPPORT=true]
+  make
+```
+
+
+
+#### Run
+
+```
+/bin/plasma-settings -m bluetooth
+```
+
+
+
+#### Install
+
+```
+sudo make install
+```
